Bug 777255 - fontconfig update racy, causes update storm that freezes the desktop

https://bugzilla.gnome.org/show_bug.cgi?id=777255

Patch from Jan Alexander Steffens (heftig).